Correction overlap/scroll mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,6 +24,7 @@
 html {
   scroll-behavior: smooth;
   overflow-x: hidden;
+  width: 100%;
 }
 
 body {
@@ -33,6 +34,8 @@ body {
   line-height: 1.7;
   letter-spacing: 0em;
   overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
 }
 
 /* Typography */
